docs + basic tests